<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailAlbum"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base"
    tools:context="com.example.vinilos.ui.main.view.DetailCollectorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.VinylsApplication.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ButtonColor"
            app:popupTheme="@style/Theme.VinylsApplication.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="90">


            <TextView
                android:id="@+id/textContentCollector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="114dp"
                tools:text="Name Collector" />


            <TextView
                android:id="@+id/favorite_performers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:text="@string/favorite_performers"
                android:textColor="@color/turquoise"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textContentCollector" />

            <TextView
                android:id="@+id/content_favorite_performers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                app:layout_constraintBaseline_toBaselineOf="@+id/favorite_performers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/favorite_performers"
                tools:text="Favoritos" />

            <TextView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/comments"
                android:textColor="@color/turquoise"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content_favorite_performers" />

            <TextView
                android:id="@+id/textContentComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/comments"
                app:layout_constraintStart_toEndOf="@+id/comments"
                tools:text="Comentarios " />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>