...
    <string name="detail_artist_description_image">Imagen del detalle del artista</string>
    <string name="item_layout_description_image">Imagen del artista,album o coleccionista</string>
    <string name="menu_aspirant_label">Aspirants</string>
    <string name="menu_project_label">Projects</string>
    <string name="menu_interview_label">Interviews</string>
    <string name="logo">Logo</string>
    <string name="collector">Coleccionistas</string>
    <string name="login">Login</string>
    <string name="loginWithGooge">Google Login</string>
    <string name="NeedAnAccount">¿Need an account?</string>
    <string name="AlreadyRegister">¿Already Registered?</string>
    <string name="SignUp">Create User</string>
    <string name="SaveInformation">Save Information</string>
    <string name="SignUpCompany">Create Company</string>
    <string name="SignUpInLogin">SignUp</string>
    <string name="collector_label">Coleccionista:</string>
    <string name="favorite_performers">Interpretes favoritos:</string>
    <string name="comments">Comentarios:</string>
    <string name="add_album_btn">Crear un nuevo album</string>
    <string name="sub_menu_album_options">Agregar Canción</string>
    <string name="form_name_song">Nombre Canción</string>
    <string name="form_song_min">min</string>
...
