<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_graph_album"
        android:icon="@drawable/ic_navbar_album_icon"
        android:title="@string/menu_aspirant_label" />
    <item
        android:id="@+id/nav_graph_artist"
        android:icon="@drawable/ic_navbar_sing_icon"
        android:title="@string/menu_project_label" />
    <item
        android:id="@+id/action_books"
        android:icon="@drawable/ic_navbar_collectors_icon_2"
        android:title="@string/menu_interview_label" />
</menu>